--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StikApp</title>
+    <meta name="description" content="StikApp - Experience the Future of Productivity with features like Timer, Customizable Settings, and Real-time Weather updates.">
+    <meta name="keywords" content="StikApp, Productivity App, Timer, Custom Settings, Real-time Weather, App Store, Google Play">
+    <title>StikApp - Experience the Future of Productivity</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -36,7 +38,6 @@
             text-align: center;
             text-shadow: 2px 2px 0 #FFFFFF, -2px -2px 0 #FFFFFF, 2px -2px 0 #FFFFFF, -2px 2px 0 #FFFFFF;
         }
-
         .hero h2 {
             font-size: 3rem;
             margin: 0;
@@ -107,31 +108,36 @@
         </div>
     </div>
     <div class="container">
-        <div class="features">
+        <section class="features">
             <div class="feature">
-                <img src="Untitled design-5.png" alt="Timer">
+                <img src="Untitled design-5.png" alt="Timer feature of StikApp">
                 <h3>Timer</h3>
                 <p>Manage your time efficiently with our versatile timer feature.</p>
             </div>
             <div class="feature">
-                <img src="Untitled design-6.png" alt="Settings">
+                <img src="Untitled design-6.png" alt="Customizable settings in StikApp">
                 <h3>Settings</h3>
                 <p>Customize your experience to suit your needs and preferences.</p>
             </div>
             <div class="feature">
-                <img src="Untitled design-7.png" alt="Weather">
+                <img src="Untitled design-7.png" alt="Real-time weather updates in StikApp">
                 <h3>Weather</h3>
                 <p>Stay updated with real-time weather information.</p>
             </div>
-        </div>
-        <div class="app-links">
+        </section>
+        <section class="app-links">
             <div class="app-link">
-                <p>Coming Soon to the App Store </p>
+                <p>Coming to the App Store in September</p>
             </div>
             <div class="app-link">
-                <p> Coming Soon to Google Play</p>
+                <p>Coming to Google Play in April</p>
             </div>
-        </div>
+        </section>
     </div>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 StikApp. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
