--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StikTools - Your All-in-One Utility App</title>
+    <title>Privacy Policy - StikTools</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -59,12 +59,12 @@ nav ul {
         }
 
         nav ul li a:hover {
-            color: #0071e3;
+            color: #1c1c1e;
         }
 
         #home {
             padding: 100px 0;
-            background: linear-gradient(135deg, #0071e3 0%, #1c1c1e 100%);
+            background: linear-gradient(135deg, #1c1c1e 0%, #1c1c1e 100%);
             color: #ffffff;
             text-align: center;
         }
@@ -103,14 +103,14 @@ nav ul {
         }
 
         #home .btn {
-            color: #0071e3;
+            color: #1c1c1e;
             background: #ffffff;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         #home .btn:hover {
             background: #f0f0f5;
-            color: #0071e3;
+            color: #1c1c1e;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
         }
 
@@ -220,7 +220,7 @@ nav ul {
         #contact input:focus,
         #contact textarea:focus {
             outline: none;
-            border-color: #0071e3;
+            border-color: #1c1c1e;
             background: #ffffff;
         }
 
@@ -231,7 +231,7 @@ nav ul {
             margin-top: 20px;
             border: none;
             border-radius: 25px;
-            background: #0071e3;
+            background: #1c1c1e;
             color: #ffffff;
             font-size: 1.2rem;
             font-weight: 600;
@@ -240,7 +240,7 @@ nav ul {
         }
 
         #contact button:hover {
-            background: #005bb5;
+            background: #1c1c1e;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
         }
 
@@ -257,7 +257,7 @@ nav ul {
         }
 
         a {
-            color: #0071e3;
+            color: #1c1c1e;
             text-decoration: none;
             font-weight: 600;
         }
@@ -271,80 +271,31 @@ nav ul {
     <!-- Header Section -->
     <header>
         <div class="container">
-            <h1>StikTools</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <h1>StikTools Privacy Policy</h1>
+            <a href="index.html" class="btn-home">Home</a>
         </div>
     </header>
 
-    <!-- Home Section -->
-    <section id="home">
+    <!-- Privacy Policy Section -->
+    <div id="privacy-content">
         <div class="container">
-            <h2>Welcome to StikTools</h2>
-            <p>Your all-in-one utility app for daily tasks.</p>
-            <div class="btn-container">
-                <a href="#features" class="btn">Explore Features</a>
-                <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
-            </div>
-        </div>
-    </section>
+            <h2>Effective Date: 08/09/24</h2>
 
-    <!-- Features Section -->
-    <section id="features">
-        <div class="container">
-            <h2>Features</h2>
-            <div class="features-grid">
-                <div class="feature">
-                    <h3>Random Number Generator</h3>
-                    <p>Generate random numbers for games, decisions, or just for fun!</p>
-                </div>
-                <div class="feature">
-                    <h3>QRCode Generator</h3>
-                    <p>Create custom QR codes for your links, text, or any data.</p>
-                </div>
-                <div class="feature">
-                    <h3>Level Tool</h3>
-                    <p>Use your device as a handy level tool to make sure everything is perfectly aligned.</p>
-                </div>
-                <div class="feature">
-                    <h3>Flashlight</h3>
-                    <p>Instant access to your device’s flashlight for emergencies.</p>
-                </div>
-                <div class="feature">
-                    <h3>Counter</h3>
-                    <p>Keep track of counts, whether it's reps, rounds, or anything else.</p>
-                </div>
-                <div class="feature">
-                    <h3>Password Generator</h3>
-                    <p>Generate secure passwords to keep your accounts safe.</p>
-                </div>
-                <div class="feature">
-                    <h3>Whiteboard</h3>
-                    <p>Draw, sketch, and jot down ideas with the simple whiteboard tool.</p>
-                </div>
-                <div class="feature">
-                    <h3>College Planner</h3>
-                    <p>Organize your academic schedule and tasks effortlessly.</p>
-                </div>
-                <div class="feature">
-                    <h3>Expense Tracker</h3>
-                    <p>Manage your finances with an easy-to-use expense tracker.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+            <h2>Your Privacy</h2>
+            <p>StikTools respects your privacy. We don’t collect any personal data when you use our app.</p>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
+            <h2>No Data Collection</h2>
+            <p>We don’t collect, store, or share any information about you. Your data stays private.</p>
+
+            <h2>No Third-Party Services</h2>
+            <p>StikTools does not use any services that collect your information.</p>
+
+            <h2>Policy Updates</h2>
+            <p>If we make changes to this policy, we’ll update it here. Please check back for any updates.</p>
+
             <h2>Contact Us</h2>
-          <center><h1>Email: stephen@blustik.com</h1></center>
+            <p>Questions? Reach out to us at <a href="mailto:stephen@blustik.com">stephen@blustik.com</a>.</p>
         </div>
-    </section>
+    </div>
 </body>
 </html>
