--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@ nav ul {
             <p>Your all-in-one utility app for daily tasks.</p>
             <div class="btn-container">
                 <a href="#features" class="btn">Explore Features</a>
+                                <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the testflight.</a>
                 <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
             </div>
         </div>
