--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ nav ul {
         <div class="container">
             <h2>Welcome to StikTools</h2>
             <p>Your all-in-one utility app for daily tasks.</p>
-            <div class="btn-container"
+            <div class="btn-container">
                 <a href="#features" class="btn">Explore Features</a>
                 <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
                                                 <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the testflight.</a>
