--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ nav ul {
             <div class="btn-container">
                 <a href="#features" class="btn">Explore Features</a>
                 <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
-                                                <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the testflight.</a>
+                                                <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the Testflight</a>
             </div>
         </div>
     </section>
