--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@ nav ul {
             <div class="btn-container">
                 <a href="#features" class="btn">Explore Features</a>
                 <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
-                                                <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the Testflight</a>
+                <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the Testflight</a>
+                <a href="https://github.com/StikTools/StikTools" class="btn btn-privacy">View on Github</a>
             </div>
         </div>
     </section>
