--- a/index.html
+++ b/index.html
@@ -298,8 +298,10 @@
         <div class="btn-container">
             <a href="#features" class="btn">Explore Features</a>
             <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
-            <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the Testflight</a>
+            <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the TestFlight</a>
             <a href="https://github.com/StikTools/StikTools" class="btn btn-privacy">View on Github</a>
+            <a href="https://discord.gg/qwcxgjg7rc" class="btn">Join the Discord</a>
+            <a href="https://mc.blustik.com" class="btn btn-privacy">Join the BluStik Craft Minecraft server.</a>
         </div>
     </div>
 </section>
