--- a/privacy.html
+++ b/privacy.html
@@ -22,34 +22,33 @@
         }
 
         header {
-    background: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(10px);
-    padding: 20px 0;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    display: flex; /* Added */
-    align-items: center; /* Added */
-    justify-content: space-between; /* Added */
-}
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
+            padding: 20px 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
 
-header h1 {
-    margin: 0;
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: #0071e3;
-}
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: #0071e3;
+        }
 
-nav ul {
-    padding: 0;
-    list-style: none;
-    margin: 0;
-    display: flex;
-    align-items: center; /* Added */
-    gap: 30px;
-}
-
+        nav ul {
+            padding: 0;
+            list-style: none;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            gap: 30px;
+        }
 
         nav ul li a {
             color: #1c1c1e;
@@ -279,16 +278,14 @@ nav ul {
     <!-- Privacy Policy Section -->
     <div id="privacy-content">
         <div class="container">
-            <h2>Effective Date: 08/09/24</h2>
+            <h2>Effective Date: 08/21/24</h2>
 
             <h2>Your Privacy</h2>
-            <p>StikTools respects your privacy. We don’t collect any personal data when you use our app.</p>
+            <p>StikTools respects your privacy. We don’t directly collect any personal data when you use our app.</p>
 
-            <h2>No Data Collection</h2>
-            <p>We don’t collect, store, or share any information about you. Your data stays private.</p>
-
-            <h2>No Third-Party Services</h2>
-            <p>StikTools does not use any services that collect your information.</p>
+            <h2>Data Collection</h2>
+            <p>StikTools does not directly collect or store any personal information from its users. However, we use Cloudflare for website security, performance purposes, and to serve news content. Cloudflare may collect limited information, such as IP addresses, while loading the news content and during your interaction with our website. This is done to protect our site from malicious activities, improve performance, and ensure that the news content is delivered efficiently. This data is handled in accordance with Cloudflare’s privacy policy, which you can review <a href="https://www.cloudflare.com/privacypolicy/" target="_blank">here</a>.
+            </p>
 
             <h2>Policy Updates</h2>
             <p>If we make changes to this policy, we’ll update it here. Please check back for any updates.</p>
