--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <p>Your all-in-one utility app for daily tasks.</p>
         <div class="btn-container">
             <a href="privacy.html" class="btn btn-privacy">Privacy Policy</a>
-            <a href="https://testflight.apple.com/join/n7y77Avj" class="btn">Join the TestFlight</a>
+            <a href="https://discord.gg/qwcxgjg7rc" class="btn">Join the Discord for the TestFlight</a>
             <a href="https://github.com/StikTools/StikTools" class="btn btn-privacy">View on Github</a>
             <a href="https://discord.gg/qwcxgjg7rc" class="btn">Join the Discord</a>
         </div>
@@ -353,7 +353,7 @@
 <section id="contact">
     <div class="container">
         <h2>Contact Us</h2>
-        <center><h1>Email: stephen@blustik.com</h1></center>
+        <center><h1>Email: support@stiktools.xyz</h1></center>
     </div>
 </section>
 </body>
