--- a/privacy.html
+++ b/privacy.html
@@ -291,7 +291,7 @@
             <p>If we make changes to this policy, we’ll update it here. Please check back for any updates.</p>
 
             <h2>Contact Us</h2>
-            <p>Questions? Reach out to us at <a href="mailto:stephen@blustik.com">stephen@blustik.com</a>.</p>
+            <p>Questions? Reach out to us at <a href="mailto:support@stiktools.xyz">support@stiktools.xyz</a>.</p>
         </div>
     </div>
 </body>
