--- a/privacy.html
+++ b/privacy.html
@@ -278,14 +278,13 @@
     <!-- Privacy Policy Section -->
     <div id="privacy-content">
         <div class="container">
-            <h2>Effective Date: 08/21/24</h2>
+            <h2>Effective Date: 10/14/24</h2>
 
             <h2>Your Privacy</h2>
             <p>StikTools respects your privacy. We don’t directly collect any personal data when you use our app.</p>
 
             <h2>Data Collection</h2>
-            <p>StikTools does not directly collect or store any personal information from its users. However, we use Cloudflare for website security, performance purposes, and to serve news content. Cloudflare may collect limited information, such as IP addresses, while loading the news content and during your interaction with our website. This is done to protect our site from malicious activities, improve performance, and ensure that the news content is delivered efficiently. This data is handled in accordance with Cloudflare’s privacy policy, which you can review <a href="https://www.cloudflare.com/privacypolicy/" target="_blank">here</a>.
-            </p>
+            <p>StikTools does not directly collect or store any personal information from its users.</p>
 
             <h2>Policy Updates</h2>
             <p>If we make changes to this policy, we’ll update it here. Please check back for any updates.</p>
