--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - StikTools</title>
+    <title>Privacy Policy - StikNES</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -270,7 +270,7 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <h1>StikTools Privacy Policy</h1>
+            <h1>StikNES Privacy Policy</h1>
             <a href="index.html" class="btn-home">Home</a>
         </div>
     </header>
@@ -278,19 +278,19 @@
     <!-- Privacy Policy Section -->
     <div id="privacy-content">
         <div class="container">
-            <h2>Effective Date: 10/14/24</h2>
+            <h2>Effective Date: 11/18/24</h2>
 
             <h2>Your Privacy</h2>
-            <p>StikTools respects your privacy. We don’t directly collect any personal data when you use our app.</p>
+            <p>StikNES respects your privacy. We don’t directly collect any personal data when you use our app.</p>
 
             <h2>Data Collection</h2>
-            <p>StikTools does not directly collect or store any personal information from its users.</p>
+            <p>StikNES does not directly collect or store any personal information from its users.</p>
 
             <h2>Policy Updates</h2>
             <p>If we make changes to this policy, we’ll update it here. Please check back for any updates.</p>
 
             <h2>Contact Us</h2>
-            <p>Questions? Reach out to us at <a href="mailto:support@stiktools.xyz">support@stiktools.xyz</a>.</p>
+            <p>Questions? Join our<a href="https://discord.gg/Vde9TnCUGa">Discord</a>.</p>
         </div>
     </div>
 </body>
