--- a/privacy.html
+++ b/privacy.html
@@ -288,8 +288,8 @@
             <h2>Policy Updates</h2>
             <p>If we make changes to this policy, we’ll update it here. Please check back for any updates.</p>
 
-            <h2>Contact Us</h2>
-            <p>Questions? Join our<a href="https://discord.gg/Vde9TnCUGa">Discord</a>.</p>
+            <h2>Questions & Support?</h2>
+            <p>Questions or need support? Join our <a href="https://discord.gg/Vde9TnCUGa">Discord</a>.</p>
         </div>
     </div>
 </body>
